testdata/baselines/reference/submodule/conformance/importDefaultBindingDefer.errors.txt
b.ts(3,1): error TS2304: Cannot find name 'defer'.


==== a.ts (0 errors) ====
    export default function defer() {
        console.log("defer from a");
    }
    
==== b.ts (1 errors) ====
    import defer from "a";
    
    defer();
    ~~~~~
!!! error TS2304: Cannot find name 'defer'.